--- a/src/css/ProfileModule.css
+++ b/src/css/ProfileModule.css
@@ -72,6 +72,34 @@ body {
 .profile-nav-item i {
     margin-right: 0.5rem;
 }
+.dropdown:hover .dropdown-content {
+    display: block;
+  }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    min-width: 160px;
+    z-index: 1;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+
+}
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}  
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+nav .dropdown {
+    line-height: 2.1;
+}
 
 .profile-header {
     border-bottom: 1px solid var(--border);
